fixed jumping

--- a/style.css
+++ b/style.css
@@ -58,3 +58,12 @@
   top: -25pt;
   transform-origin: center;
 }
+
+.spawn {
+  animation: spawn 1s ease-in;
+}
+
+@keyframes spawn {
+  from {opacity: 0}
+  to {opacity: 1}
+}
